  * Added `documentation support` for accessing the central frequency of a TBN frame
  * Added support for variable noise level in the various lsl.sim.dp functions
  * Worked on improving ATLAS library detection on Redhat-based distributions
  * Improved detection of potential build problems with the DRSU direct-access extension

0.4.3
  * Cleaned up the various __init__.py scripts
  * Fixed a few typos in lsl.correlator.uvUtils
  * Fixed a typo in the progress bar caused some decrements to increment
  * Fixed a few typos in lsl.correlator.uvUtils.computeUVTrack
  * Fixed a typo in the _spec.PPSDC2() function that caused it to die
  * Fixed several heinous problems in sim.dp.pointSource()
  * Fixed a bug with indexing in the 4-bit TBW reader
  * Fixed a few sign errors in correlator _core and uvUtils modules
  * Fixed a bug in the correlateTBW script related to antenna indexing
  * Fixed a bug in the FITS IDI writer that caused EOP problems to be fatal

0.4.2
  * Fixed tbwSpectra.py to skip over non-TBW frames at the beginning of a TBW file
  * Fixed the common.stations.geo2ecef() conversion function (Ticket #16)
  * Fixed the correlator.fx.FXMaster() function (Ticket #18)
  * Fixed a few type conversion problems in correlator._core (core.c) introduced with the new data types
  * Fixed a frequency units conversion in tbnSpectra.py
  * Improved polarization support in the FITS IDI writer
  * Fixed a sign error in the fractional delay correction of the correlator F engine
  * Improved the speed of the X Engine
  * Fixed a azimuth definition problem in astro_array.c
  * Updated the included SSMIF to the 5/18/2011 version
  * Updated the correlateTBN script to make computing XX and YY products easier
  * Added support for different cable attenuation models supported in MCS0031, v5
  * Added support for the old 20-stand prototype system through lsl.common.stations.prototypeSystem
  * Updated the correlateTBW script to make computing XX and YY products easier